# real_time_crypto_trading_bot_with_kubernetes

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml
.devcontainer/: postCreateCommand.sh
deployments/dev/kind/: create_cluster.sh  install_kafka.sh  install_kafka_ui.sh  install_risingwave.sh  kind-with-portmapping.yaml
deployments/dev/kind/manifests/: mlflow-values.yaml
deployments/dev/technical_indicators/: technical_indicators.yaml
deployments/dev/training-pipeline/: training-pipeline-cj.yaml
deployments/prod/candles/: candles.yaml
docker/: candles.Dockerfile  technical-indicators.Dockerfile  trades.Dockerfile
lessons/: 02_manual_k8s_workloads.md  99_getting_started_with_c4.md  session_1.md  session_2.md  session_3.md  session_4.md  session_5.md  session_6.md
scripts/: build-and-push-image.sh  deploy.sh
services/candles/: pyproject.toml  settings.env
services/candles/src/candles/: main.py
services/predictor/: .env.local.sample  README.md  eda_report.html  pyproject.toml  query.sql
services/predictor/src/predictor/: config.py  data_validation.py  debug.py  model_registry.py  model_validation.py  models.py  predict.py  train.py
services/technical_indicators/: config.yaml  pyproject.toml  query.sql
services/technical_indicators/src/technical_indicators/: candle.py  config.py  main.py
services/trades/: pyproject.toml  settings.env
services/trades/src/trades/: config.py  main.py
