[project]
name = "technical-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mvoss02", email = "m_l_voss@web.de" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
